# MicroSerial

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: bootstrap-ci.yml  gui-headless.yml
core/: CMakeLists.txt
core/include/MicroSerial/: ms_core.h
core/include/MicroSerial/functions/: ms_log_message.h  ms_log_set_level.h  ms_ring_buffer_free.h  ms_ring_buffer_init.h  ms_ring_buffer_read.h  ms_ring_buffer_size.h  ms_ring_buffer_write.h  ms_serial_port_close.h  ms_serial_port_configure.h  ms_serial_port_enumerate.h  ms_serial_port_list_free.h  ms_serial_port_open.h  ms_serial_port_poll.h  ms_serial_port_start.h  ms_serial_port_write.h
core/include/MicroSerial/io/: ring_buffer.h  serial.h  serial_config.h  serial_discovery.h
core/include/MicroSerial/os/: event_loop.h
core/include/MicroSerial/plugins/: plugin_abi.h
core/include/MicroSerial/util/: logging.h  time.h
core/src/io/: serial_event_loop.c  serial_internal.h  serial_port.c
core/src/os/: port_enumeration.c  posix_serial.c
core/src/util/: logging.c  ring_buffer.c  time.c
core/tests/: CMakeLists.txt  serial_loopback_test.c
docs/: build.md  design.md  roadmap.md
docs/gui/: first_run.md  rendering.md  troubleshooting.md
gui/: Cargo.toml  build.rs
gui/src/: app.rs  console.rs  core.rs  device_scan.rs  diagnostics.rs  lib.rs  main.rs  profiles.rs  renderer.rs  send_panel.rs  session.rs  settings.rs  theme.rs
gui/tests/: headless.rs  loopback.rs  settings.rs
plugins/: README.md
scripts/: build_all.sh
scripts/common/: pslib.ps1  shlib.sh
scripts/linux/: bootstrap.sh
scripts/macos/: bootstrap.sh
scripts/windows/: bootstrap.ps1
tests/: README.md
