[package]
name = "microserial_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
libc = "0.2"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.26", default-features = false, features = ["wgpu", "wayland", "x11"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.26", default-features = false, features = ["wgpu"] }

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
