[package]
name = "microserial_gui"
version = "0.1.0"
edition = "2024"
links = "microserial_core"

[dependencies]
directories = "5"
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.27", default-features = false, features = ["image"] }
egui-wgpu = { version = "0.27", default-features = false }
env_logger = "0.11"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["macros", "formatting", "serde"] }
wgpu = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.29", default-features = false, features = ["x11", "wayland"] }

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30", default-features = false, features = ["term"] }

[dev-dependencies]
tempfile = "3"
